<resources>
    <string name="app_name">Movies App</string>
    <string name="go_button">Go</string>
    <string name="popular_tv_shows_title">Popular TV shows</string>
    <string name="no_contents">No data to load</string>
    <string name="tv_show_image">Tv Show Image</string>
    <string name="poster_image">Poster image</string>
    <string name="popularity">Popularity: %s</string>
    <string name="overview">Overview</string>
    <string name="sort_menu">Sort</string>
    <string name="alpha_sort_a_z">Alphabetically (a-z)</string>
    <string name="alpha_sort_z_a">Alphabetically (z-a)</string>
    <string name="popularity_low_high">Popularity (low-high)</string>
    <string name="popularity_high_low">Popularity (high-low)</string>
    <string name="vote_low_high">Average Vote (low-high)</string>
    <string name="vote_high_low">Average Vote (high-low)</string>
    <string name="air_date_low_high">First air date (latest last)</string>
    <string name="air_date_high_low">First air date (latest first)</string>
    <string name="popularity_text">Popularity</string>
    <string name="first_air_date_text">First Air Date</string>
    <string name="seasons_text">Seasons</string>
    <string name="episodes_text">Episodes</string>
    <string name="status_text">Status</string>
    <string name="type_text">Type</string>
    <string name="vote_average_text">Vote Average</string>
    <string name="vote_count_text">Vote Count</string>
    <string name="details_screen_title">Details</string>
    <string name="image">Image</string>
</resources>